# agrirouter-api-cpp

./: .gitignore  AgrirouterClientTesterConfig.json  CMakeLists.txt  README.md  meson.build  meson_options.txt
AgrirouterClientTester/: CMakeLists.txt
AgrirouterClientTester/inc/: Application.h  Communicator.h
AgrirouterClientTester/src/: Application.cpp  Communicator.cpp  main.cpp
cpplint/: README.md  lint
lib/AgrirouterClient/: CMakeLists.txt  meson.build
lib/AgrirouterClient/inc/: AgrirouterClient.h  AgrirouterMessage.h  AgrirouterMessageUtils.h  ConnectionProvider.h  CurlConnectionProvider.h  Definitions.h  MessageProvider.h  MqttClient.h  MqttConnectionClient.h  MqttConnectionProvider.h  Registration.h  Settings.h  Utils.h
lib/AgrirouterClient/inc/Protobuf/cloud-provider-integration/: cloud-virtualized-app-registration.pb.h
lib/AgrirouterClient/inc/Protobuf/commons/: chunk.pb.h  message.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/request/: request.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/request/payload/account/: endpoints.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/request/payload/endpoint/: capabilities.pb.h  subscription.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/request/payload/feed/: feed-requests.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/response/: response.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/response/payload/account/: endpoints.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/response/payload/endpoint/: capability.pb.h
lib/AgrirouterClient/inc/Protobuf/messaging/response/payload/feed/: feed-response.pb.h
lib/AgrirouterClient/src/: AgrirouterClient.cpp  AgrirouterMessage.cpp  MessageProvider.cpp  Registration.cpp  Settings.cpp
lib/AgrirouterClient/src/ConnectionProvider/: ConnectionProvider.cpp  CurlConnectionProvider.cpp  CurlConnectionProvider.h  MqttConnectionClient.cpp  MqttConnectionProvider.cpp
lib/AgrirouterClient/src/Mqtt/: MqttClient.cpp
lib/AgrirouterClient/src/Protobuf/: CMakeLists.txt  compileProtos.sh  meson.build
lib/AgrirouterClient/src/Protobuf/cloud-provider-integration/: cloud-virtualized-app-registration.pb.cc
lib/AgrirouterClient/src/Protobuf/commons/: chunk.pb.cc  message.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/request/: request.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/request/payload/account/: endpoints.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/request/payload/endpoint/: capabilities.pb.cc  subscription.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/request/payload/feed/: feed-requests.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/response/: response.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/response/payload/account/: endpoints.pb.cc  endpoints.proto
lib/AgrirouterClient/src/Protobuf/messaging/response/payload/endpoint/: capability.pb.cc
lib/AgrirouterClient/src/Protobuf/messaging/response/payload/feed/: feed-response.pb.cc
proto/: compileProtos.sh
